--- a/kevcoin.html
+++ b/kevcoin.html
@@ -1,7 +1,10 @@
+<body>
 <title>KevCoin</title>
-
+meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
 <img width=159 height=159 src="https://raw.githubusercontent.com/squirrelcom/KevCoin-Online/main/Kevcoin.png">
 <h1>KevCoin (KC)</h1>
+</body>
 
 <pre>
 How are KevCoins Laid out?
