--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<link rel="apple-touch-icon" sizes="48x48" href="https://raw.githubusercontent.com/piper-AI/thedirectory/main/favicon-3.png">
+<link rel="apple-touch-icon" sizes="208x208" href="https://raw.githubusercontent.com/piper-AI/Henry/main/Screenshot%202022-11-15%20at%2019.46.09.png">
 <style>
 body {
   background-color: black;
