--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Henry</title>
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <link rel="apple-touch-icon" sizes="208x208" href="https://raw.githubusercontent.com/piper-AI/Henry/main/Screenshot%202022-11-15%20at%2019.46.09.png">
@@ -24,11 +25,14 @@ var a;
 </head>
 <body>
 <center>
-  <a href="search.html" onclick="popitup(this.href)"><img src="search.png" style="width:60px;height:60px;"></a><a href="calculator.html"><img src="calculator.png" style="width:60px;height:60px;"></a><a href="news.html" onclick="popitup(this.href)"><img src="News.png" style="width:60px;height:60px;"></a><a href="draw.html"><img src="draw.png" style="width:60px;height:60px;"></a>
-  <a href="office.html" onclick="popitup(this.href)"><img src="map.png" style="width:60px;height:60px;"></a><a href="amazon.html"><img src="john.png" style="width:60px;height:60px;"></a><a href="youtube.html" onclick="popitup(this.href)"><img src="mc.png" style="width:60px;height:60px;"></a><a href="stopwatch.html"><img src="stop.png" style="width:60px;height:60px;"></a>
+  <a href="https://piper-ai.github.io/seARch/" onclick="popitup(this.href)"><img src="search.png" style="width:60px;height:60px;"></a><a href="calculator.html"><img src="calculator.png" style="width:60px;height:60px;"></a><a href="https://thedirectory.koiltech.repl.co" onclick="popitup(this.href)"><img src="direct.png" style="width:60px;height:60px;"></a><a href="sketch.html"><img src="draw.png" style="width:60px;height:60px;"></a>
+  <a href="kevcoin.html" onclick="popitup(this.href)"><img src="kc.png" style="width:60px;height:60px;"></a>
   <br>
   <br>
-  <iframe src="https://thedirectory.koiltech.repl.co/feed.php" style="width:100%;height:300pt;border:none;"></iframe>
+  <br>
+  <br>
+  <br>
+  <iframe src="https://thedirectory.koiltech.repl.co/feed.php" style="width:100%;height:250pt;border:none;"></iframe>
 <p></p>
 
 </body>
