--- a/kevcoin.html
+++ b/kevcoin.html
@@ -1,10 +1,11 @@
-<body>
+<html>
+<head>
 <title>KevCoin</title>
 meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <img width=159 height=159 src="https://raw.githubusercontent.com/squirrelcom/KevCoin-Online/main/Kevcoin.png">
 <h1>KevCoin (KC)</h1>
-</body>
+</head>
 
 <pre>
 How are KevCoins Laid out?
@@ -107,3 +108,4 @@ KevCoin: <textarea rows=4 cols=64 name=token>Your KevCoin will appear here. You 
         })
     </script>
 <center><font size="-1">Copyright © 2022, 23 Squirrel Enterprises, KevCoin, Kevin and Adam</font></center>
+</html>
