--- a/index.html
+++ b/index.html
@@ -28,7 +28,23 @@ var a;
   <a href="https://piper-ai.github.io/seARch/"><img src="search.png" style="width:60px;height:60px;"></a><a href="calculator.html"><img src="calculator.png" style="width:60px;height:60px;"></a><a href="https://thedirectory.koiltech.repl.co"><img src="direct.png" style="width:60px;height:60px;"></a><a href="sketch.html"><img src="draw.png" style="width:60px;height:60px;"></a>
   <a href="kevcoin.html"><img src="kc.png" style="width:60px;height:60px;"></a>
   <br>
-  <br>
+  <form method="GET" action="seARch.html">
+<center>
+<table border="0" cellspacing="0" cellpadding="5" width="70%">
+<tbody><tr><td bgcolor="#000000">
+<center>
+<input type="text" name="q" value="" size="40"><br>
+<select name="num" style="
+    display:  none;
+">
+<option value="10" selected="">10 results</option><option value="30">30 results</option><option value="100">100 results</option></select>
+<input type="submit" value="seARch! it">
+</center>
+</td></tr><tr><td>
+</td></tr>
+</tbody></table>
+<br>
+</form></body></html>
   <iframe src="https://thedirectory.koiltech.repl.co/feed.php" style="width:70%;height:400pt;border:none;"></iframe>
 <p></p>
 
