--- a/seARch.html
+++ b/seARch.html
@@ -82,6 +82,10 @@ border-bottom: 1px solid #ffffff;
 height: 50px;
 margin: 0;
 padding: 9 500 0 9;">
+<a id="cse-logo-target" href="index.html">
+<img id="cse-logo" src="Search.png" height="50" style="
+    margin-bottom: -50px;
+">
 </a><gcse:searchbox></gcse:searchbox></div>
 <gcse:searchresults></gcse:searchresults>
   </body>
