--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ var a;
   <a href="https://piper-ai.github.io/seARch/"><img src="search.png" style="width:60px;height:60px;"></a><a href="calculator.html"><img src="calculator.png" style="width:60px;height:60px;"></a><a href="https://thedirectory.koiltech.repl.co"><img src="direct.png" style="width:60px;height:60px;"></a><a href="sketch.html"><img src="draw.png" style="width:60px;height:60px;"></a>
   <a href="kevcoin.html"><img src="kc.png" style="width:60px;height:60px;"></a>
   <br>
-  <form method="GET" action="seARch.html">
+  <form method="GET" action="https://piper-ai.github.io/seARch/seARch.html">
 <center>
 <table border="0" cellspacing="0" cellpadding="5" width="70%">
 <tbody><tr><td bgcolor="#000000">
