--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@ var a;
 </head>
 <body>
 <center>
-  <a href="https://piper-ai.github.io/seARch/"><img src="search.png" style="width:60px;height:60px;"></a><a href="calculator.html"><img src="calculator.png" style="width:60px;height:60px;"></a><a href="https://thedirectory.koiltech.repl.co"><img src="direct.png" style="width:60px;height:60px;"></a><a href="sketch.html"><img src="draw.png" style="width:60px;height:60px;"></a>
-  <a href="kevcoin.html"><img src="kc.png" style="width:60px;height:60px;"></a>
+  <a href="https://thedirectory.koiltech.repl.co"><img src="direct.png" style="width:60px;height:60px;"></a><a href="kevcoin.html"><img src="kc.png" style="width:60px;height:60px;"></a><a href="calculator.html"><img src="calculator.png" style="width:60px;height:60px;"></a>
   <br>
   <hr>
   <br>
