--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <link rel="apple-touch-icon" sizes="208x208" href="https://raw.githubusercontent.com/piper-AI/Henry/main/Screenshot%202022-11-15%20at%2019.46.09.png">
 <style>
 body {
-  background-color: black;
   background-repeat: no-repeat;
   background-attachment: fixed; 
   background-size: 100% 100%;
@@ -24,15 +23,14 @@ var a;
 </script>
 </head>
 <body>
+  <h1>Bourbn</h1>
 <center>
-  <a href="https://thedirectory.koiltech.repl.co"><img src="direct.png" style="width:60px;height:60px;"></a><a href="kevcoin.html"><img src="kc.png" style="width:60px;height:60px;"></a><a href="calculator.html"><img src="calculator.png" style="width:60px;height:60px;"></a>
-  <br>
   <hr>
   <br>
   <form method="GET" action="https://piper-ai.github.io/seARch/seARch.html">
 <center>
 <table border="0" cellspacing="0" cellpadding="5" width="70%">
-<tbody><tr><td bgcolor="#000000">
+<tbody><tr><td bgcolor="#FFFFFF">
 <center>
 <input type="text" name="q" value="" size="40"><br>
 <select name="num" style="
