--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@ var a;
         'open_window',
         'menubar=no, toolbar=no, location=no, directories=no, status=no, scrollbars=no, resizable=no, dependent, width=600, height=300, left=0, top=0')
     }
-    .footer{ 
-       position: fixed;     
-       text-align: center;    
-       bottom: 0px; 
-       width: 100%;
 </script>
 </head>
 <body>
@@ -52,5 +47,7 @@ var a;
   <hr>
   <iframe src="https://thedirectory.koiltech.repl.co/feed.php" style="width:100%;height:300pt;border:none;"></iframe>
 <p></p>
-<div class="footer">All Rights Reserved</div>
+<div id="footer">This is a footer.
+                    This stays at the bottom of the page.
+                </div>
 </body>
