--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <style>
 body {
   background-repeat: no-repeat;
+  font-family: 'Brush Script MT', cursive;
   background-attachment: fixed; 
   background-size: 100% 100%;
 }
@@ -42,7 +43,6 @@ var a;
 </td></tr><tr><td>
 </td></tr>
 </tbody></table>
-<br>
 </form></body></html>
   <hr>
   <iframe src="https://thedirectory.koiltech.repl.co/feed.php" style="width:100%;height:300pt;border:none;"></iframe>
